Fix component spacing

--- a/src/css/ContactForm.scss
+++ b/src/css/ContactForm.scss
@@ -2,6 +2,7 @@
 
 .contact-form {
   margin: 25px 0;
+  color: white;
 
   input, textarea {
     background-color: $gray-background;
